--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -31,10 +31,10 @@
 			<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 				<div class="navbar-nav">
 					<a class="nav-item nav-link" href="../Index.html">Inicio</a>
-					<a class="nav-item nav-link active" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
-					<a class="nav-item nav-link" href="./pags/CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-					<a class="nav-item nav-link" href="./pags/CVyLogros.html">CV/Logros</a>
-					<a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
+					<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
+					<a class="nav-item nav-link" href="./CampanaSeBusca.html">Campaña "SE BUSCA"</a>
+					<a class="nav-item nav-link" href="./CVyLogros.html">CV/Logros</a>
+					<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
 				</div>
 			</div>
 		</nav>
