Se cambio la url del Index a index

--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -30,7 +30,7 @@
 			</button>
 			<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 				<div class="navbar-nav">
-					<a class="nav-item nav-link" href="../Index.html">Inicio</a>
+					<a class="nav-item nav-link" href="../index.html">Inicio</a>
 					<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
 					<a class="nav-item nav-link" href="./CampanaSeBusca.html">Campaña "SE BUSCA"</a>
 					<a class="nav-item nav-link" href="./CVyLogros.html">CV/Logros</a>
