Se agrega la pag del CV y se cambia el menu para el index

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 
 <body>
 
-  <div class="site-wrapper">
     <video id="videoInicio" poster="videoInicio.PNG" autoplay muted loop> 
       <style>
-        @media (max-width: 767px) and (){
+        @media (max-width: 767px){
           #videoInicio{
             display: none;
           }
@@ -39,50 +38,41 @@
       <source src="./archivos/videoInicio.mp4" type="video/mp4">
       </video>
 
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
 
           <header>
-          <div class="masthead">
-            <nav class="navbar navbar-expand-sm nav-masthead">
-             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">  
-            <div class="navbar-nav">
-              <a class="nav-link active" href="Index.html">Inicio</a>
-              <a class="nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
-              <a class="nav-link" href="./pags/CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-              <a class="nav-link" href="./pags/CVyLogros.html">CV/Logros</a>
-              <a class="nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
-            </div>
-            </div>
-          </nav>
-        </div>
-        </header>
+              <nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
+                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="./Index.html">Inicio</a>
+                    <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
+                    <a class="nav-item nav-link" href="./pags/CampanaSeBusca.html">Campaña "SE BUSCA"</a>
+                    <a class="nav-item nav-link" href="./pags/CV.html">CV</a>
+                    <a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
+                  </div>
+                </div>
+              </nav>
+          </header>
 
-        <main>
-        <div class="inner cover">
-          <h1 class="cover-heading">Bienvenid@ a mi página profesional.</h1>
-          <p class="lead">Atte. Javiera Ramos.</p>
-        </div>
-        </main>
-
-      </div>
-    </div>
-  </div>
+          <main>
+            <div class="d-flex flex-column justify-content-center align-items-center vh-100">
+              <h1 class="p-2 text-center">Bienvenid@ a mi página profesional.</h1>
+              <p class="lead p-2">Atte. Javiera Ramos.</p>
+            </div>
+          </main>
 
 
 
     <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+      ================================================== -->
+      <!-- Placed at the end of the document so the pages load faster -->
+      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+      <script src="../../dist/js/bootstrap.min.js"></script>
+      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+      <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
+    </html>
