--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -33,7 +33,7 @@
 					<a class="nav-item nav-link" href="../index.html">Inicio</a>
 					<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
 					<a class="nav-item nav-link" href="./CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-					<a class="nav-item nav-link" href="./CVyLogros.html">CV/Logros</a>
+					<a class="nav-item nav-link" href="./CV.html">CV</a>
 					<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
 				</div>
 			</div>
