--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
                   <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="./Index.html">Inicio</a>
+                    <a class="nav-item nav-link active" href="./index.html">Inicio</a>
                     <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
                     <a class="nav-item nav-link" href="./pags/CampanaSeBusca.html">Campaña "SE BUSCA"</a>
                     <a class="nav-item nav-link" href="./pags/CV.html">CV</a>
