--- a/index.html
+++ b/index.html
@@ -23,45 +23,45 @@
 
 <body>
 
-    <video id="videoInicio" poster="videoInicio.PNG" autoplay muted loop> 
-      <style>
-        @media (max-width: 767px){
-          #videoInicio{
-            display: none;
-          }
-          body{
-            background: url(./archivos/videoInicio2.PNG);
-            background-size: cover;
-          }
+  <video id="videoInicio" poster="videoInicio.PNG" autoplay muted loop> 
+    <style>
+      @media (max-width: 767px){
+        #videoInicio{
+          display: none;
         }
-      </style>
-      <source src="./archivos/videoInicio.mp4" type="video/mp4">
-      </video>
+        body{
+          background: url(./archivos/videoInicio2.PNG);
+          background-size: cover;
+        }
+      }
+    </style>
+    <source src="./archivos/videoInicio.mp4" type="video/mp4">
+    </video>
 
 
-          <header>
-              <nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
-                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="./Index.html">Inicio</a>
-                    <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
-                    <a class="nav-item nav-link" href="./pags/CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-                    <a class="nav-item nav-link" href="./pags/CV.html">CV</a>
-                    <a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
-                  </div>
-                </div>
-              </nav>
-          </header>
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top text-center">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="./index.html">Inicio</a>
+            <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
+            <a class="nav-item nav-link" href="./pags/CV.html">Currículum</a>
+            <a class="nav-item nav-link" href="./pags/Logros.html">Logros</a>
+            <a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-          <main>
-            <div class="d-flex flex-column justify-content-center align-items-center vh-100">
-              <h1 class="p-2 text-center">Bienvenid@ a mi página profesional.</h1>
-              <p class="lead p-2">Atte. Javiera Ramos.</p>
-            </div>
-          </main>
+    <main>
+      <div class="d-flex flex-column justify-content-center align-items-center vh-100">
+        <h1 class="p-2 text-center">Bienvenid@ a mi página profesional.</h1>
+        <p class="lead p-2">Atte. Javiera Ramos.</p>
+      </div>
+    </main>
 
 
 
