--- a/pags/CV.html
+++ b/pags/CV.html
@@ -17,118 +17,123 @@
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 
-<!-- CSS -->
+	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
 
 </head>
 
 <body>
-
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
-			<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
-				<div class="navbar-nav">
-					<a class="nav-item nav-link" href="../index.html">Inicio</a>
-					<a class="nav-item nav-link" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
-					<a class="nav-item nav-link" href="./CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-					<a class="nav-item nav-link active" href="./CV.html">CV</a>
-					<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
+		<div class="primeraCaja">	
+			<nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
+				<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
+					<div class="navbar-nav">
+						<a class="nav-item nav-link" href="../index.html">Inicio</a>
+						<a class="nav-item nav-link" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
+						<a class="nav-item nav-link active" href="./CV.html">Currículum</a>
+						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
+						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
+					</div>
 				</div>
+			</nav>
+			<div class="parallax">
+				<h1>CURRÍCULUM VITAE</h1>	
 			</div>
-		</nav>
-
-		<section class="imagenEncabezado">
-			
-		</section>
+		</div>
 	</header>
 
 	<br>
 	<main>
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-				<h2 class="text-center">Descarga mi curriculum en formato pdf o word:</h2>
+		<div class="cajaFondo col-12">
+			<div class="segundaCaja col-sm-12 col-lg-10">
+				<div class="contenido center col-12">
+					<div class="row">
+						<div class="col-12">
+							<h2 class="text-center">Descarga mi curriculum en formato pdf o word:</h2>
+						</div>
+						<div class="col-6">
+							<ul class="iconosCv">
+								<li><a href=""><i class="word far fa-file-word"></i></a></li>
+							</ul>
+						</div>
+						<div class="col-6">
+							<ul class="iconosCv">
+								<li><a href="../archivos/PresupuestoSitioWeb.pdf"><i class="pdf far fa-file-pdf"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="row">
+						<div class="lineaTiempo">
+							<ul>
+								<li>
+									<div class="content">
+										<h3 class="h3Izquierda">Banco Falabella</h3>
+										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+									</div>
+									<div class="tiempo">
+										<h4>Septiembre 2019</h4>
+									</div>
+								</li>
+								<li>
+									<div class="contenido">
+										<h3 class="h3Derecha">Lexicom</h3>
+										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+									</div>
+									<div class="tiempo">
+										<h4>Septiembre 2019</h4>
+									</div>
+								</li>
+								<li>
+									<div class="content">
+										<h3 class="h3Izquierda">Lexicom</h3>
+										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+									</div>
+									<div class="tiempo">
+										<h4>Septiembre 2019</h4>
+									</div>
+								</li>
+								<li>
+									<div class="content">
+										<h3 class="h3Derecha">USACH - Ingeniería Civil Industrial</h3>
+										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+									</div>
+									<div class="tiempo">
+										<h4>Septiembre 2019</h4>
+									</div>
+								</li>
+								<div style="clear: both;"></div>
+							</ul>
+
+						</div>
+					</div>
 				</div>
-				<div class="col-6">
-					<ul class="iconosCv">
-					<li><a href=""><i class="word far fa-file-word"></i></a></li>
-					</ul>
-				</div>
-				<div class="col-6">
-					<ul class="iconosCv">
-					<li><a href="../archivos/PresupuestoSitioWeb.pdf"><i class="pdf far fa-file-pdf"></i></a></li>
-					</ul>
-				</div>
+
 			</div>
-			<div class="row">
-				<div class="lineaTiempo">
-					<ul>
-						<li>
-							<div class="content">
-								<h3 class="h3Izquierda">Banco Falabella</h3>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
-							</div>
-							<div class="tiempo">
-								<h4>Septiembre 2019</h4>
-							</div>
-						</li>
-						<li>
-							<div class="contenido">
-								<h3 class="h3Derecha">Lexicom</h3>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
-							</div>
-							<div class="tiempo">
-								<h4>Septiembre 2019</h4>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<h3 class="h3Izquierda">Lexicom</h3>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
-							</div>
-							<div class="tiempo">
-								<h4>Septiembre 2019</h4>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<h3 class="h3Derecha">USACH - Ingeniería Civil Industrial</h3>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
-							</div>
-							<div class="tiempo">
-								<h4>Septiembre 2019</h4>
-							</div>
-						</li>
-						<div style="clear: both;"></div>
-					</ul>
-					
-				</div>
-			</div>
+
 		</div>
 
 	</main>
 
-	<br><br>
-
 	<footer>
-		<div class="footerContent">
-			<h3>Mi Página Profesional</h3>
-			<p>Si crees que sería un aporte en tu equipo de trabajo y logré convencerte de mis cualidades como profesional, no dudes en contactarme. ¡No te arrepentiras!</p>
-			<ul class="redes">
-				<li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
-				<li><a href=""><i class="fas fa-envelope"></i></a></li>
-				<li><a href=""><i class="fab fa-whatsapp"></i></a></li>
-			</ul>
-		</div>
-		<div class="footerFinal">
-			<p>Página diseñada por Javiera Ramos Rojas.</p>
+		<div class="cajaFondo">
+			<div class="footer-top">
+				<h3>Mi Página Profesional</h3>
+				<p>Si crees que sería un aporte en tu equipo de trabajo y logré convencerte de mis cualidades como profesional, no dudes en contactarme. ¡No te arrepentiras!</p>
+				<ul class="redes">
+					<li><a href="https://www.linkedin.com/in/javiera-ramos"><i class="fab fa-linkedin-in"></i></a></li>
+					<li><a href="mailto:javiera.ramos.rojas@gmail.com"><i class="fas fa-envelope"></i></a></li>
+					<li><a href="https://wa.link/vzh1b2"><i class="fab fa-whatsapp"></i></a></li>
+				</ul>
+
+			</div>
+			<p class="footerFinal">Página diseñada por Javiera Ramos Rojas.</p>
 		</div>
 	</footer>
 
-	
+
 	<!-- JQuery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!-- Bootstrap tooltips -->
@@ -137,6 +142,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 </body>
 </html>
