--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
 
 	<!-- Font Awesome -->
+	<script src="https://kit.fontawesome.com/6577691a32.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 	<!-- Google Fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
@@ -16,7 +17,8 @@
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 
-<!-- CSS -->
+
+	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
 
 </head>
@@ -24,125 +26,116 @@
 <body>
 
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
-			<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
-				<div class="navbar-nav">
-					<a class="nav-item nav-link" href="../index.html">Inicio</a>
-					<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
-					<a class="nav-item nav-link" href="./CampanaSeBusca.html">Campaña "SE BUSCA"</a>
-					<a class="nav-item nav-link" href="./CV.html">CV</a>
-					<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
-				</div>
-			</div>
-		</nav>
-
-		<section class="imagenEncabezado">
-			
-		</section>
-	</header>
-
-	<br>
-	<main>
-		<div class="container">
-			<div class="row align-items-lg-center">
-				<div class="col-12 col-lg-8">
-
-					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingOne">
-								<h3 class="panel-title">
-									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										Mi objetivo
-									</a>
-									<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-								</h3>
-							</div>
-							<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-								
-								<div class="panel-body">
-									Lo que quiero lograr con este sitio web es poder mostrar mis capacidades como profesional y llegar a ser un aporte para el que sea que le interese tenerme en su equipo. Desarrollar mi marca personal, seguir creciendo y mejorando.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingTwo">
-								<h3 class="panel-title">
-									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-										¿Por qué yo?
-									</a>
-								</h3>
-							</div>
-							<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-								<div class="panel-body">
-									Esta es la clásica pregunta de cualquier entrevista por lo que nos ahorraré tiempo. Porque no le tengo miedo a los retos y me apasiona lograr nuevas metas. Soy una persona trabajadora, proactiva, creativa, perfeccionista. Me gusta mucho trabajar en equipo, involucrarme y aprender de los demás. Durante mis casi 5 años de carrera profesional he tomado grandes desafíos y avanzado muy rápido, llegando a ser jefe de un área y ganandome la confianza de mis superiores y clientes. Entiendo el lenguaje de la tecnología y también tu lenguaje, por lo que creo que soy el pack completo.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingThree">
-								<h3 class="panel-title">
-									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-										Una Mini Biografía
-									</a>
-								</h3>
-							</div>
-							<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-								<div class="panel-body">
-									Nací en Santiago de Chile un 29 de Octubre de 1991. Fuí hija única durante 1 año y 9 meses hasta que nació mi hermano Leonardo. Somos tan físicamente diferentes como similares en nuestra forma de pensar. Su llegada me ayudó a ser más extrovertida, a aprender a compartir y trabajar en equipo. Mi padre estudió Ingeniería pero nunca pudo llegar a titularse, era muy bueno con los números y desde pequeña crecí viendolo calcular todo, creo que los números eran tan familiares para mí que siempre se me dieron fáciles. De ahí a la Ingeniería había solo un par de pasos. Fui creciendo y con la llegada de Internet y las nuevas tecnologías mi mejor pasatiempo fue aprender a usar programas como Photoshop o el manejo de HTML. Durante mi carrera de Ingeniería Civil Industrial mi interés por aprender y crear cosas fue cada vez haciéndose más grande lo que me llevó a inclinarme por el área de la informática. No fue fácil dirigir mi carrera en esa dirección, pero al día de hoy me hago cargo de un sistema yo sola y me parece que lo hago bastante bien. "Lo úncio imposible es aquello que no intentas".
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingFour">
-								<h3 class="panel-title">
-									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-										Mis Valores
-									</a>
-								</h3>
-							</div>
-							<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-								<div class="panel-body">
-									<ul>
-										<li>Respeto a las personas.</li>
-										<li>Cooperación.</li>
-										<li>Transparencia.</li>
-										<li>Perseverancia.</li>
-										<li>Libertad de pensamiento y expresión.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
+		<div class="primeraCaja">	
+			<nav class="navbar navbar-expand-sm navbar-dark negro scrolling-navbar fixed-top">
+				<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
+					<div class="navbar-nav">
+						<a class="nav-item nav-link" href="../index.html">Inicio</a>
+						<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
+						<a class="nav-item nav-link" href="./CV.html">Currículum</a>
+						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
+						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
 					</div>
 				</div>
-				<div class="col-12 col-lg-4">
-					<img class="img-fluid" src="../archivos/yo.jpg">
-				</div>	
+			</nav>
+
+			<div class="parallax">
+				<h1>UN POCO SOBRE MÍ</h1>	
 			</div>
+		</div>
+	</header>
+
+	<main class="tema">
+		<div class="cajaFondo col-12">
+			<div class="segundaCaja col-sm-12 col-lg-10">
+				<div class="contenido center col-12">
+					<section id="cartas">
+						<div class="container-md">
+							<div class="title">
+								<h2>Un Mini Biografía</h2>
+								<p>Mi nombre es Javiera Ramos, nací en Santiago de Chile un 29 de Octubre de 1991. Fuí hija única durante 1 año y 9 meses hasta que nació mi hermano Leonardo. Somos tan físicamente diferentes como similares en nuestra forma de pensar. Su llegada me ayudó a ser más extrovertida, a aprender a compartir y trabajar en equipo. Mi padre estudió Ingeniería pero nunca pudo llegar a titularse, era muy bueno con los números y desde pequeña crecí viendolo calcular todo, creo que los números eran tan familiares para mí que siempre se me dieron fáciles. De ahí a la Ingeniería había solo un par de pasos. Fui creciendo y con la llegada de Internet y las nuevas tecnologías mi mejor pasatiempo fue aprender a usar programas como Photoshop o el manejo de HTML. Durante mi carrera de Ingeniería Civil Industrial mi interés por aprender y crear cosas fue cada vez haciéndose más grande lo que me llevó a inclinarme por el área de la informática. No fue fácil dirigir mi carrera en esa dirección, pero al día de hoy me hago cargo de un sistema yo sola y me parece que lo hago bastante bien. "Lo úncio imposible es aquello que no intentas".</p>
+							</div>
+							<hr class="featurette-divider">
+							<div class="row">
+								<div class="col-lg-4">
+									<div class="card text-center">
+										<img src="../archivos/objetivo.png" class="card-img-top">
+										<div class="card-body">
+											<button class="btn" data-toggle="collapse" data-target="#content1">
+												<h3 class="card-title">MI OBJETIVO</h3>
+											</button>
+											<div class="collapse" id="content1">
+												<p class="card-text">Lo que quiero lograr con este sitio web es poder mostrar mis capacidades como profesional y llegar a ser un aporte para el que sea que le interese tenerme en su equipo. Desarrollar mi marca personal, seguir creciendo y mejorando.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="card text-center">
+										<img src="../archivos/business.png" class="card-img-top">
+										<div class="card-body">
+											<button class="btn" data-toggle="collapse" data-target="#content2">
+												<h3 class="card-title">¿POR QUÉ YO?</h3>
+											</button>
+											<div class="collapse" id="content2">
+												<p class="card-text">Esta es la pregunta que no puede faltar en cualquier entrevista, asi que la responderé ahora.
+													¿Por qué yo?
+												Porque no le tengo miedo a los retos, me apasiona lograr nuevas metas. Soy una persona trabajadora, proactiva, creativa, perfeccionista. Me gusta mucho trabajar en equipo, involucrarme y aprender de los demás. Durante mis casi 5 años de carrera profesional he tomado grandes desafíos y avanzado mucho, llegando a ser jefe de un área y ganandome la confianza de mis superiores y clientes.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="card text-center">
+										<img src="../archivos/valores.jpg" class="card-img-top">
+										<div class="card-body">
+											<button class="btn" data-toggle="collapse" data-target="#content3">
+												<h3 class="card-title">MIS VALORES</h3>
+											</button>
+											<div class="collapse" id="content3">
+												<p><ul class="text-left card-text">
+													<li>Respeto a las personas.</li>
+													<li>Cooperación.</li>
+													<li>Transparencia.</li>
+													<li>Perseverancia.</li>
+													<li>Libertad de pensamiento y expresión.</li>
+												</ul></p>
+											</div>
+										</div>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</section>
+				</div>
+
+			</div>
+
 		</div>
 
 	</main>
 
-	<br><br>
-
 	<footer>
-		<div class="footerContent">
-			<h3>Mi Página Profesional</h3>
-			<p>Si crees que sería un aporte en tu equipo de trabajo y logré convencerte de mis cualidades como profesional, no dudes en contactarme. ¡No te arrepentiras!</p>
-			<ul class="redes">
-				<li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
-				<li><a href=""><i class="fas fa-envelope"></i></a></li>
-				<li><a href=""><i class="fab fa-whatsapp"></i></a></li>
-			</ul>
-		</div>
-		<div class="footerFinal">
-			<p>Página diseñada por Javiera Ramos Rojas.</p>
+		<div class="cajaFondo">
+			<div class="footer-top">
+				<h3>Mi Página Profesional</h3>
+				<p>Si crees que sería un aporte en tu equipo de trabajo y logré convencerte de mis cualidades como profesional, no dudes en contactarme. ¡No te arrepentiras!</p>
+				<ul class="redes">
+					<li><a href="https://www.linkedin.com/in/javiera-ramos"><i class="fab fa-linkedin-in"></i></a></li>
+					<li><a href="mailto:javiera.ramos.rojas@gmail.com"><i class="fas fa-envelope"></i></a></li>
+					<li><a href="https://wa.link/vzh1b2"><i class="fab fa-whatsapp"></i></a></li>
+				</ul>
+
+			</div>
+			<p class="footerFinal">Página diseñada por Javiera Ramos Rojas.</p>
 		</div>
 	</footer>
 
-	
+
 	<!-- JQuery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!-- Bootstrap tooltips -->
@@ -151,6 +144,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 </body>
 </html>
