corrigiendo error de ortografia

--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -55,7 +55,7 @@
 					<section id="cartas">
 						<div class="container-md">
 							<div class="title">
-								<h2>Un Mini Biografía</h2>
+								<h2>Una Mini Biografía</h2>
 								<p>Mi nombre es Javiera Ramos, nací en Santiago de Chile un 29 de Octubre de 1991. Fuí hija única durante 1 año y 9 meses hasta que nació mi hermano Leonardo. Somos tan físicamente diferentes como similares en nuestra forma de pensar. Su llegada me ayudó a ser más extrovertida, a aprender a compartir y trabajar en equipo. Mi padre estudió Ingeniería pero nunca pudo llegar a titularse, era muy bueno con los números y desde pequeña crecí viendolo calcular todo, creo que los números eran tan familiares para mí que siempre se me dieron fáciles. De ahí a la Ingeniería había solo un par de pasos. Fui creciendo y con la llegada de Internet y las nuevas tecnologías mi mejor pasatiempo fue aprender a usar programas como Photoshop o el manejo de HTML. Durante mi carrera de Ingeniería Civil Industrial mi interés por aprender y crear cosas fue cada vez haciéndose más grande lo que me llevó a inclinarme por el área de la informática. No fue fácil dirigir mi carrera en esa dirección, pero al día de hoy me hago cargo de un sistema yo sola y me parece que lo hago bastante bien. "Lo úncio imposible es aquello que no intentas".</p>
 							</div>
 							<hr class="featurette-divider">
