--- a/pags/UnPocoSobreMi.html
+++ b/pags/UnPocoSobreMi.html
@@ -34,7 +34,7 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 					<div class="navbar-nav">
 						<a class="nav-item nav-link" href="../index.html">Inicio</a>
-						<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
+						<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Acerca de mí</a>
 						<a class="nav-item nav-link" href="./CV.html">Currículum</a>
 						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
 						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
@@ -43,7 +43,7 @@
 			</nav>
 
 			<div class="parallax">
-				<h1>UN POCO SOBRE MÍ</h1>	
+				<h1>ACERCA DE MÍ</h1>	
 			</div>
 		</div>
 	</header>
