cambiando la barra de navegacion para que mi hermano sea feliz

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="./index.html">Inicio</a>
-            <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Un poco sobre mí</a>
+            <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Acerca de mí</a>
             <a class="nav-item nav-link" href="./pags/CV.html">Currículum</a>
             <a class="nav-item nav-link" href="./pags/Logros.html">Logros</a>
             <a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
