--- a/pags/CV.html
+++ b/pags/CV.html
@@ -32,7 +32,7 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 					<div class="navbar-nav">
 						<a class="nav-item nav-link" href="../index.html">Inicio</a>
-						<a class="nav-item nav-link" href="./UnPocoSobreMi.html">Un poco sobre mí</a>
+						<a class="nav-item nav-link" href="./UnPocoSobreMi.html">Acerca de mí</a>
 						<a class="nav-item nav-link active" href="./CV.html">Currículum</a>
 						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
 						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
