puse un <a> al Bienvenidos del inicio

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <main>
       <div class="d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1 class="p-2 text-center">Bienvenid@ a mi página profesional.</h1>
+        <h1 class="p-2 text-center"><a href="./pags/UnPocoSobreMi.html">Bienvenid@ a mi página profesional.</a></h1>
         <p class="lead p-2">Atte. Javiera Ramos.</p>
       </div>
     </main>
