Se sube la ultima version

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
 
-  <title>Inicio</title>
+  <!--SEO-->
+  <meta name="description" content="Esta es la página profesional de Javiera Ramos"><!--Esto es para que el buscador muestre tu pagina si el usuario las busca-->
+  <meta name="keywords" content="Javiera Ramos, Página Profesional, Ingeniería Civil, Ingeniero, Ingeniera, html, desarrollo web"> <!--Estas son las palabras claves por las cuales el usuario puede buscar en google o algun buscador"-->
+  <meta name="autor" content="Javiera Ramos">
 
-  <!--NO VOY A PONER EL SEO PORQUE AUN ESTOY PROVANDO LOS DISEÑOS Y NO QUIERO QUE EL CÓDIGO ESTÉ SIMPLE-->
+  <!--Open graph (cuando comparti mi página con una red social)-->
+  <meta property="og:locale" content="es_es"><!--El lenguaje de la página-->
+  <meta property="og:type" content="website"><!--Describe el tipo de página que estoy compartiendo con las redes-->
+  <meta property="og:title" content="Pagina de Javiera Ramos">
+  <meta property="og:description" content="Visita la pagina profesional de Javiera Ramos, una excelente profesional!!">
+  <meta property="og:url" content="http://javieraramos.cl">
+  <meta property="og:image" content="./archivos/logo.png"><!--Esto es para compartir mi página a través de una imágen o un video, una o la otra-->
+
+  <title>Inicio | Javiera Ramos</title>
+
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -32,6 +41,8 @@
         body{
           background: url(./archivos/videoInicio2.PNG);
           background-size: cover;
+          background-position: center center;
+          background-attachment: fixed;
         }
       }
     </style>
@@ -47,7 +58,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="./index.html">Inicio</a>
-            <a class="nav-item nav-link" href="./pags/UnPocoSobreMi.html">Acerca de mí</a>
+            <a class="nav-item nav-link" href="./pags/AcercaDeMi.html">Acerca de mí</a>
             <a class="nav-item nav-link" href="./pags/CV.html">Currículum</a>
             <a class="nav-item nav-link" href="./pags/Logros.html">Logros</a>
             <a class="nav-item nav-link" href="./pags/CitarParaEntrevista.html">Citar a entrevista</a>
@@ -58,7 +69,7 @@
 
     <main>
       <div class="d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1 class="p-2 text-center"><a href="./pags/UnPocoSobreMi.html">Bienvenid@ a mi página profesional.</a></h1>
+        <h1 class="p-2 text-center"><a href="./pags/AcercaDeMi.html">Bienvenid@ a mi página profesional.</a></h1>
         <p class="lead p-2">Atte. Javiera Ramos.</p>
       </div>
     </main>
