--- a/pags/CV.html
+++ b/pags/CV.html
@@ -3,7 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Curriculum Vitae</title>
+	<!--SEO-->
+	<meta name="description" content="Esta es la página profesional de Javiera Ramos"><!--Esto es para que el buscador muestre tu pagina si el usuario las busca-->
+	<meta name="keywords" content="Javiera Ramos, Página Profesional, Ingeniería Civil, Ingeniero, Ingeniera, html, desarrollo web"> <!--Estas son las palabras claves por las cuales el usuario puede buscar en google o algun buscador"-->
+	<meta name="autor" content="Javiera Ramos">
+
+	<!--Open graph (cuando comparti mi página con una red social)-->
+	<meta property="og:locale" content="es_es"><!--El lenguaje de la página-->
+	<meta property="og:type" content="website"><!--Describe el tipo de página que estoy compartiendo con las redes-->
+	<meta property="og:title" content="Pagina de Javiera Ramos">
+	<meta property="og:description" content="Visita la pagina profesional de Javiera Ramos, una excelente profesional!!">
+	<meta property="og:url" content="http://javieraramos.cl">
+	<meta property="og:image" content="./archivos/logo.png"><!--Esto es para compartir mi página a través de una imágen o un video, una o la otra-->
+
+	<title>Curriculum Vitae  | Javiera Ramos</title>
 
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
 
@@ -32,7 +45,7 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 					<div class="navbar-nav">
 						<a class="nav-item nav-link" href="../index.html">Inicio</a>
-						<a class="nav-item nav-link" href="./UnPocoSobreMi.html">Acerca de mí</a>
+						<a class="nav-item nav-link" href="./AcercaDeMi.html">Acerca de mí</a>
 						<a class="nav-item nav-link active" href="./CV.html">Currículum</a>
 						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
 						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
@@ -56,12 +69,12 @@
 						</div>
 						<div class="col-6">
 							<ul class="iconosCv">
-								<li><a href=""><i class="word far fa-file-word"></i></a></li>
+								<li><a href="../archivos/CV_JavieraRamos.docx"><i class="word far fa-file-word"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-6">
 							<ul class="iconosCv">
-								<li><a href="../archivos/PresupuestoSitioWeb.pdf"><i class="pdf far fa-file-pdf"></i></a></li>
+								<li><a href="../archivos/CV_JavieraRamos.pdf"><i class="pdf far fa-file-pdf"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -69,39 +82,46 @@
 						<div class="lineaTiempo">
 							<ul>
 								<li>
-									<div class="content">
+									<div class="contenido">
 										<h3 class="h3Izquierda">Banco Falabella</h3>
-										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+										<h5>LIDER DE PRODUCCIÓN</h5>	
+										<p>Velar por el correcto funcionamiento del sistema de recaudación de la empresa de cobranza del Banco Falabella. Desde atender consultas de los usuarios hasta revisar incidencias en la malla, BD, servidores o cualquier incidencia en producción (Oracle SQL; Control-M).</p>
 									</div>
 									<div class="tiempo">
-										<h4>Septiembre 2019</h4>
+										<h4>Oct. 2019 - Presente</h4>
 									</div>
 								</li>
 								<li>
 									<div class="contenido">
 										<h3 class="h3Derecha">Lexicom</h3>
-										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+										<h5>JEFE DE PROCESOS Y PROYECTOS</h5>
+										<p>Por el lado de Procesos debía supervisar y revisar el levantamiento de los procesos realizado por el Analista, junto con a documentacion asociada.
+										Por el lado de Proyectos debía generar el caso de negocio hasta realizar el paso a producción, hasta acompañar los primeros días a la operatividad.</p>
+
 									</div>
 									<div class="tiempo">
-										<h4>Septiembre 2019</h4>
+										<h4>Jul. 2018 - Sep 2019</h4>
 									</div>
 								</li>
 								<li>
-									<div class="content">
+									<div class="contenido">
 										<h3 class="h3Izquierda">Lexicom</h3>
-										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+										<h5>ANALISTA DE PROCESOS Y PROYECTOS</h5>
+										<p>Debía recopilar la información disponible y levantar el "AS IS" del proceso. Luego buscar los puntos de dolor y proponer propuestas viables (BPM y LEAN). Formalizar la definición del "TO BE" del proceso, y por último, generar la documentación y procedimientos.
+										Por el lado de Proyectos debía realizar el QA del sistema en cuestión y velar porque se cumplieran los objetivos en tiempo y forma, reportar incidencias y hacer el seguimiento respectivo.</p>
 									</div>
 									<div class="tiempo">
-										<h4>Septiembre 2019</h4>
+										<h4>Jun. 2016 - Jun. 2018</h4>
 									</div>
 								</li>
 								<li>
-									<div class="content">
-										<h3 class="h3Derecha">USACH - Ingeniería Civil Industrial</h3>
-										<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam excepturi aperiam vero omnis temporibus soluta laborum qui delectus nostrum officia, similique sed architecto, adipisci quis culpa, hic necessitatibus molestiae magni.</p>
+									<div class="contenido">
+										<h3 class="h3Derecha">USACH</h3>
+										<h5>INGENIERÍA CIVIL INDUSTRIAL</h5>
+										<p>El pefil de un Ingeniero Industrial es muy amplio, sin embargo, dentro de las cosas que está capacitado para hacer es: Planificar y controlar los procesos de implementación y operación de un sistema de producción de bienes y/o servicios; Aplicar modelos, métodos, procesos y estrategias para la generación y captura de valor en soluciones de base científico-tecnológica; Gestionar la implementación y operación de sistemas de producción de bienes y/o servicios que permitan la generación y captura de valor; entre otras.</p>
 									</div>
 									<div class="tiempo">
-										<h4>Septiembre 2019</h4>
+										<h4>Abr. 2010 - Mayo 2016</h4>
 									</div>
 								</li>
 								<div style="clear: both;"></div>
