--- a/pags/CitarParaEntrevista.html
+++ b/pags/CitarParaEntrevista.html
@@ -3,13 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
 
-  <title>Citar a Entrevista</title>
+  <!--SEO-->
+  <meta name="description" content="Esta es la página profesional de Javiera Ramos"><!--Esto es para que el buscador muestre tu pagina si el usuario las busca-->
+  <meta name="keywords" content="Javiera Ramos, Página Profesional, Ingeniería Civil, Ingeniero, Ingeniera, html, desarrollo web"> <!--Estas son las palabras claves por las cuales el usuario puede buscar en google o algun buscador"-->
+  <meta name="autor" content="Javiera Ramos">
 
-  <!--NO VOY A PONER EL SEO PORQUE AUN ESTOY PROVANDO LOS DISEÑOS Y NO QUIERO QUE EL CÓDIGO ESTÉ SIMPLE-->
+  <!--Open graph (cuando comparti mi página con una red social)-->
+  <meta property="og:locale" content="es_es"><!--El lenguaje de la página-->
+  <meta property="og:type" content="website"><!--Describe el tipo de página que estoy compartiendo con las redes-->
+  <meta property="og:title" content="Pagina de Javiera Ramos">
+  <meta property="og:description" content="Visita la pagina profesional de Javiera Ramos, una excelente profesional!!">
+  <meta property="og:url" content="http://javieraramos.cl">
+  <meta property="og:image" content="./archivos/logo.png"><!--Esto es para compartir mi página a través de una imágen o un video, una o la otra-->
+
+  <title>Citar a Entrevista | Javiera Ramos</title>
+
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -41,6 +50,8 @@
         body{
           background: url(../archivos/videoInicio2.PNG);
           background-size: cover;
+          background-position: center center;
+          background-attachment: fixed;
         }
       }
     </style>
@@ -56,7 +67,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="../index.html">Inicio</a>
-            <a class="nav-item nav-link" href="./UnPocoSobreMi.html">Acerca de mí</a>
+            <a class="nav-item nav-link" href="./AcercaDeMi.html">Acerca de mí</a>
             <a class="nav-item nav-link" href="./CV.html">Currículum</a>
             <a class="nav-item nav-link" href="./Logros.html">Logros</a>
             <a class="nav-item nav-link active" href="./CitarParaEntrevista.html">Citar a entrevista</a>
