--- a/pags/Logros.html
+++ b/pags/Logros.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <!--SEO-->
+  <meta name="description" content="Esta es la página profesional de Javiera Ramos"><!--Esto es para que el buscador muestre tu pagina si el usuario las busca-->
+  <meta name="keywords" content="Javiera Ramos, Página Profesional, Ingeniería Civil, Ingeniero, Ingeniera, html, desarrollo web"> <!--Estas son las palabras claves por las cuales el usuario puede buscar en google o algun buscador"-->
+  <meta name="autor" content="Javiera Ramos">
 
-  <title>Logros</title>
+  <!--Open graph (cuando comparti mi página con una red social)-->
+  <meta property="og:locale" content="es_es"><!--El lenguaje de la página-->
+  <meta property="og:type" content="website"><!--Describe el tipo de página que estoy compartiendo con las redes-->
+  <meta property="og:title" content="Pagina de Javiera Ramos">
+  <meta property="og:description" content="Visita la pagina profesional de Javiera Ramos, una excelente profesional!!">
+  <meta property="og:url" content="http://javieraramos.cl">
+  <meta property="og:image" content="./archivos/logo.png"><!--Esto es para compartir mi página a través de una imágen o un video, una o la otra-->
 
-  <!--NO VOY A PONER EL SEO PORQUE AUN ESTOY PROVANDO LOS DISEÑOS Y NO QUIERO QUE EL CÓDIGO ESTÉ SIMPLE-->
+  <title>Logros | Javiera Ramos</title>
+
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -41,7 +49,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="../index.html">Inicio</a>
-            <a class="nav-item nav-link" href="./UnPocoSobreMi.html">Acerca de mí</a>
+            <a class="nav-item nav-link" href="./AcercaDeMi.html">Acerca de mí</a>
             <a class="nav-item nav-link" href="./CV.html">Currículum</a>
             <a class="nav-item nav-link active" href="./Logros.html">Logros</a>
             <a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
@@ -151,7 +159,7 @@
                     <div class="contenidoCaja">
                       <div class="tarjeta">
                         <h2>Desempeño</h2>
-                        <p>Mantener una buena evaluación de desempeño por parte de mis clientes y pares durante todos estos años (número??).
+                        <p>Mantener una buena evaluación de desempeño por parte de mis clientes y pares durante todos estos años. Con una nota mayor o igual a 3 puntos de 4.
                         </p>
                       </div>
                     </div>
