--- a/pags/AcercaDeMi.html
+++ b/pags/AcercaDeMi.html
@@ -3,7 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Un poco sobre mi</title>
+	<!--SEO-->
+	<meta name="description" content="Esta es la página profesional de Javiera Ramos"><!--Esto es para que el buscador muestre tu pagina si el usuario las busca-->
+	<meta name="keywords" content="Javiera Ramos, Página Profesional, Ingeniería Civil, Ingeniero, Ingeniera, html, desarrollo web"> <!--Estas son las palabras claves por las cuales el usuario puede buscar en google o algun buscador"-->
+	<meta name="autor" content="Javiera Ramos">
+
+	<!--Open graph (cuando comparti mi página con una red social)-->
+	<meta property="og:locale" content="es_es"><!--El lenguaje de la página-->
+	<meta property="og:type" content="website"><!--Describe el tipo de página que estoy compartiendo con las redes-->
+	<meta property="og:title" content="Pagina de Javiera Ramos">
+	<meta property="og:description" content="Visita la pagina profesional de Javiera Ramos, una excelente profesional!!">
+	<meta property="og:url" content="http://javieraramos.cl">
+	<meta property="og:image" content="./archivos/logo.png"><!--Esto es para compartir mi página a través de una imágen o un video, una o la otra-->
+
+	<title>Acerca de mi | Javiera Ramos</title>
 
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
 
@@ -34,7 +47,7 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
 					<div class="navbar-nav">
 						<a class="nav-item nav-link" href="../index.html">Inicio</a>
-						<a class="nav-item nav-link active" href="./UnPocoSobreMi.html">Acerca de mí</a>
+						<a class="nav-item nav-link active" href="./AcercaDeMi.html">Acerca de mí</a>
 						<a class="nav-item nav-link" href="./CV.html">Currículum</a>
 						<a class="nav-item nav-link" href="./Logros.html">Logros</a>
 						<a class="nav-item nav-link" href="./CitarParaEntrevista.html">Citar a entrevista</a>
